--- a/index.html
+++ b/index.html
@@ -13,26 +13,49 @@
   <body class="container-fluid">
 
     <header class="row">
-        <h1>Grande</h1>
-        <nav>
-
-        </nav>
+        <h1>Yogurt</h1>
+        <div class="col-12">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar w/ text</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+              </ul>
+              <span class="navbar-text">
+                Navbar text with an inline element
+              </span>
+            </div>
+          </nav>
+        </div>
     </header>
 
     <div class="row">
     <main class="col-lg-8 col-12">
 
         <div class="container">
-            <section class="col-lg-4 col-sm-12" >
+            <div class="row">
+            <section class="col-lg-12 col-sm-12" >
+                <div class="col-lg-4 col-sm-12" >o</div>
+            </section>
+            <section class="col-lg-6 col-sm-12" >
                 o
             </section>
-            <section class="col-lg-4 col-sm-12" >
-                o
-            </section>
-            <section class="col-lg-8 col-sm-12 ">
+            <section class="col-lg-6 col-sm-12 ">
                 o
             </section>
         </div>
+    </div>
         
 
     </main>   
@@ -40,10 +63,14 @@
     <aside class="col-lg-4 col-12">
         <div class="row">
             <section class="col-12 mt-1 mb-2">
-                o
+                <nav>o</nav>
             </section>
             <section class="col-12 mt-1 mb-2">
-                o
+                <h3>Menos Lidos</h3>
+                <li><ul>lol</ul></li>
+                <li><ul>lol</ul></li>
+                <li><ul>lol</ul></li>
+                <li><ul>lol</ul></li>
             </section>
             <section class="col-12 mt-1 mb-2">
                 o
