--- a/index.html
+++ b/index.html
@@ -10,89 +10,91 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap" rel="stylesheet">
     <title>Grande</title>
   </head>
-  <body class="container-fluid">
+    <body class="container-fluid">
 
-    <header class="row">
-        <h1>Yogurt</h1>
-        <div class="col-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar w/ text</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-              </ul>
-              <span class="navbar-text">
-                Navbar text with an inline element
-              </span>
-            </div>
-          </nav>
-        </div>
-    </header>
-
-    <div class="row">
-    <main class="col-lg-8 col-12">
-
-        <div class="container">
-            <div class="row">
-            <section class="col-lg-12 col-sm-12" >
-                <div class="col-lg-4 col-sm-12" >o</div>
-            </section>
-            <section class="col-lg-6 col-sm-12" >
-                o
-            </section>
-            <section class="col-lg-6 col-sm-12 ">
-                o
-            </section>
-        </div>
-    </div>
-        
-
-    </main>   
-
-    <aside class="col-lg-4 col-12">
-        <div class="row">
-            <section class="col-12 mt-1 mb-2">
-                <nav>o</nav>
-            </section>
-            <section class="col-12 mt-1 mb-2">
-                <h3>Menos Lidos</h3>
-                <li><ul>lol</ul></li>
-                <li><ul>lol</ul></li>
-                <li><ul>lol</ul></li>
-                <li><ul>lol</ul></li>
-            </section>
-            <section class="col-12 mt-1 mb-2">
-                o
-            </section>
-        </div>
-    </aside>
-    </div>
-
-    <footer class="row">
-        <section class="col-lg-4 col-12">
-            <h3>JHRK</h3>
-        </section>
-        <section class="col-lg-4 col-12">
-            <h3>Senoc</h3>
-        </section>
-        <section class="col-lg-4 col-12">
-            <H3>Aula BIO</H3>
-        </section>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
-  </body>
+      <header class="row">
+          <h1>Yogurt</h1>
+          <div class="col-12">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <a class="navbar-brand" href="#">Navbar w/ text</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                </ul>
+                <span class="navbar-text">
+                  Navbar text with an inline element
+                </span>
+              </div>
+            </nav>
+          </div>
+      </header>
+  
+      <div class="row">
+      <main class="col-lg-8 col-12">
+  
+          <div class="container">
+              <div class="row">
+              <section class="col-lg-12 col-sm-12" >
+                  o
+              </section>
+              <section class="col-lg-6 col-sm-12" >
+                  o
+              </section>
+              <section class="col-lg-6 col-sm-12 ">
+                  o
+              </section>
+          </div>
+      </div>
+          
+  
+      </main>   
+  
+      <aside class="col-lg-4 col-12">
+          <div class="row">
+              <section class="col-12 mt-1 mb-2">
+                  <nav>o</nav>
+              </section>
+              <section class="col-12 mt-1 mb-2">
+                  <h3>Menos Lidos</h3>
+                  <ul>
+                    <li>lol</li>
+                    <li>lol</li>
+                    <li>lol</li>
+                    <li>lol</li>
+                    <li>lol</li>
+                  </ul>
+              </section>
+              <section class="col-12 mt-1 mb-2">
+                  o
+              </section>
+      </aside>
+      </div>
+  
+      <footer class="row">
+          <section class="col-lg-4 col-12">
+              <h3>JHRK</h3>
+          </section>
+          <section class="col-lg-4 col-12">
+              <h3>Senoc</h3>
+          </section>
+          <section class="col-lg-4 col-12">
+              <H3>Aula BIO</H3>
+          </section>
+      </footer>
+  
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+      <script src="script.js"></script>
+    </body>
 </html>
