Tudo Lindo e bonito

--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
           <h1>Yogurt</h1>
           <div class="col-12">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="#">Navbar w/ text</a>
+              <a class="navbar-brand" href="#">Search something</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Casa <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Características</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Preçagem</a>
                   </li>
                 </ul>
                 <span class="navbar-text">
-                  Navbar text with an inline element
+                  Pesquise
                 </span>
               </div>
             </nav>
@@ -41,18 +41,53 @@
       </header>
   
       <div class="row">
-      <main class="col-lg-8 col-12">
+      <main class="col-lg-8 col-12 ">
   
           <div class="container">
               <div class="row">
-              <section class="col-lg-12 col-sm-12" >
-                  o
+              <section class="col-lg-12 col-sm-12 mt-3" >
+                <div class="row">
+                  <div class="col-12"><h2>Destaques</h2></div>
+                  <div class="col-xl-4 col-sm-12"><img src="./img/cf285c3f3e8eee61d1f06d4b537a0837.jpg"></div>
+                  <div class="col-xl-8 col-sm-12">
+                    <h3>Phosphor Bubbles</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
+                  </div>
+                </div>
               </section>
-              <section class="col-lg-6 col-sm-12" >
-                  o
+              <section class="col-lg-6 col-sm-12 mt-3" >
+                  <div class="row">
+                    <div class="col-12"><h2>Innovative</h2></div>
+                      <div class="col-xl-8 col-sm-12">
+                      <h3>Fabric Headphones</h3> 
+                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
+                      <br>
+                      <div class="col-12"><h4>Semelhantes</h4></div>
+                      <ul>
+                        <li>Legal</li>
+                        <li>Legal</li>
+                        <li>Legal</li>
+                        <li>Legal</li>
+                      </ul>
+                    </div>
+                  </div>
               </section>
-              <section class="col-lg-6 col-sm-12 ">
-                  o
+              <section class="col-lg-6 col-sm-12 mt-3">
+                  <h2>Champagne</h2>
+                  <div class="row">
+                    <div class="col-xl-8 col-sm-12">
+                      <h3>Rose and Demi-Sec</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
+                      <br>
+                      <div class="col-12"><h4>Semelhantes</h4></div>
+                      <ul>
+                        <li>Legal</li>
+                        <li>Legal</li>
+                        <li>Legal</li>
+                        <li>Legal</li>
+                      </ul>
+                    </div>
+                  </div>
               </section>
           </div>
       </div>
@@ -63,20 +98,26 @@
       <aside class="col-lg-4 col-12">
           <div class="row">
               <section class="col-12 mt-1 mb-2">
-                  <nav>o</nav>
+                  <nav>Search Now</nav>
               </section>
               <section class="col-12 mt-1 mb-2">
                   <h3>Menos Lidos</h3>
                   <ul>
-                    <li>lol</li>
-                    <li>lol</li>
-                    <li>lol</li>
-                    <li>lol</li>
-                    <li>lol</li>
+                    <li>The Fox that appeared in the sky</li>
+                    <li>Lego man on fire</li>
+                    <li>Brooklin Bottle Banana</li>
+                    <li>Tall Guy terrorize town</li>
+                    <li>Pimpo Dimpo: The movie</li>
                   </ul>
               </section>
-              <section class="col-12 mt-1 mb-2">
-                  o
+              <section class="col-sm-12 col-xl-12 mt-1 mb-2">
+                <div class="row">
+                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
+                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
+                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
+                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
+                </div>
+                  
               </section>
       </aside>
       </div>
