--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <div class="col-xl-8 col-sm-12">
                     <h3>Phosphor Bubbles</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
+                    <a>Leia menos</a>
                   </div>
                 </div>
               </section>
@@ -95,7 +96,7 @@
   
       </main>   
   
-      <aside class="col-lg-4 col-12">
+      <aside class="col-lg-4 col-12 mt-3">
           <div class="row">
               <section class="col-12 mt-1 mb-2">
                   <nav>Search Now</nav>
@@ -112,18 +113,19 @@
               </section>
               <section class="col-sm-12 col-xl-12 mt-1 mb-2">
                 <div class="row">
-                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
-                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
-                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
-                  <img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg">
+                  <div class="col-xl-6"><img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg"></div>
+                  <div class="col-xl-6"><img src="./img/6e9c7931b5e60dc51471962eaa4f9be4.jpg"></div>
+                  <div class="col-xl-6"><img src="./img/cf285c3f3e8eee61d1f06d4b537a0837.jpg"></div>
+                  <div class="col-xl-6"><img src="./img/80013a154d5bd7c3ad7917a92d229c06.jpg"></div>
                 </div>
                   
               </section>
       </aside>
       </div>
-  
-      <footer class="row">
-          <section class="col-lg-4 col-12">
+     
+        <footer class="container-fluid mt-5">
+          <div class="row">         
+            <section class="col-lg-4 col-12">
               <h3>JHRK</h3>
           </section>
           <section class="col-lg-4 col-12">
@@ -132,7 +134,10 @@
           <section class="col-lg-4 col-12">
               <H3>Aula BIO</H3>
           </section>
+        </div>
+
       </footer>
+
   
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
