--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <div class="col-xl-4 col-sm-12"><img src="./img/cf285c3f3e8eee61d1f06d4b537a0837.jpg"></div>
                   <div class="col-xl-8 col-sm-12">
                     <h3>Phosphor Bubbles</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
-                    <a>Leia menos</a>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure tenetur dolorem esse vitae quam, molestias nostrum excepturi? Eveniet numquam quos autem ut omnis laudantium illo corporis quo, neque pariatur. Voluptatem.</p>
+                    <button>Leia menos</button>
                   </div>
                 </div>
               </section>
@@ -62,6 +62,7 @@
                       <div class="col-xl-8 col-sm-12">
                       <h3>Fabric Headphones</h3> 
                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
+                      <button>Leia menos</button>
                       <br>
                       <div class="col-12"><h4>Semelhantes</h4></div>
                       <ul>
@@ -79,6 +80,7 @@
                     <div class="col-xl-8 col-sm-12">
                       <h3>Rose and Demi-Sec</h3>
                       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet laboriosam dolores, pariatur hic praesentium corporis consectetur dolor qui iure quae. Voluptates fugiat porro optio, obcaecati fugit est! Dolor, dignissimos quo.</p>
+                      <button>Leia menos</button>
                       <br>
                       <div class="col-12"><h4>Semelhantes</h4></div>
                       <ul>
