Tudo Bonito e Finalizado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body class="container-fluid">
 
       <header class="row">
-          <h1>Yogurt</h1>
+          <h1><a href="index.html" style="font-family:Work Sans; text-decoration:none; color:#ffffff; background-color: #f30008;">Yogurt</a></h1>
           <div class="col-12">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <a class="navbar-brand" href="#">Search something</a>
@@ -23,13 +23,13 @@
               <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Casa <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Casa <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Características</a>
+                    <a class="nav-link" href="carac.html">Características</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Preçagem</a>
+                    <a class="nav-link" href="preca.html">Preçagem</a>
                   </li>
                 </ul>
                 <span class="navbar-text">
@@ -115,30 +115,36 @@
               </section>
               <section class="col-sm-12 col-xl-12 mt-1 mb-2">
                 <div class="row">
-                  <div class="col-xl-6"><img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg"></div>
-                  <div class="col-xl-6"><img src="./img/6e9c7931b5e60dc51471962eaa4f9be4.jpg"></div>
-                  <div class="col-xl-6"><img src="./img/cf285c3f3e8eee61d1f06d4b537a0837.jpg"></div>
-                  <div class="col-xl-6"><img src="./img/80013a154d5bd7c3ad7917a92d229c06.jpg"></div>
+                  <div class="col"><img src="./img/a56069f285c379cb79b26a5bb9a1d2fb.jpg"></div>
+                  <div class="col"><img src="./img/6e9c7931b5e60dc51471962eaa4f9be4.jpg"></div>
+                  <div class="col"><img src="./img/cf285c3f3e8eee61d1f06d4b537a0837.jpg"></div>
+                  <div class="col"><img src="./img/80013a154d5bd7c3ad7917a92d229c06.jpg"></div>
                 </div>
-                  
               </section>
       </aside>
       </div>
-     
-        <footer class="container-fluid mt-5">
-          <div class="row">         
-            <section class="col-lg-4 col-12">
-              <h3>JHRK</h3>
-          </section>
-          <section class="col-lg-4 col-12">
-              <h3>Senoc</h3>
-          </section>
-          <section class="col-lg-4 col-12">
-              <H3>Aula BIO</H3>
-          </section>
-        </div>
 
-      </footer>
+      <footer class="container-fluid mt-5">
+        <div class="row">         
+          <section class="col-lg-4 col-12">
+            <h3>JHRK</h3>
+            <p>The best person ever</p>
+            <p>Give me a call: 99 99999 9999 </p>
+
+        </section>
+        <section class="col-lg-4 col-12">
+            <h3>Senoc</h3>
+            <p>It rocks!</p>
+            <p>You can study here</p>
+        </section>
+        <section class="col-lg-4 col-12">
+            <H3>Aula BIO</H3>
+            <p>Brain Damage</p>
+            <p>Mitochondria is the powehouse of the cell</p>
+        </section>
+      </div>
+
+    </footer>
 
   
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
