--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <body class="container-fluid">
 
       <header class="row">
-          <h1><a href="index.html" style="font-family:Work Sans; text-decoration:none; color:#ffffff; background-color: #f30008;">Yogurt</a></h1>
+          <h1><a href="index.html" style="font-family:Work Sans; text-decoration:none; color:#ffffff; background-color: #f30008;">••Yogurt••</a></h1>
           <div class="col-12">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="#">Search something</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -32,9 +31,8 @@
                     <a class="nav-link" href="preca.html">Preçagem</a>
                   </li>
                 </ul>
-                <span class="navbar-text">
-                  Pesquise
-                </span>
+                <nav>
+                  <form><input type="search" placeholder="Search Something"></form></nav>
               </div>
             </nav>
           </div>
@@ -101,7 +99,8 @@
       <aside class="col-lg-4 col-12 mt-3">
           <div class="row">
               <section class="col-12 mt-1 mb-2">
-                  <nav>Search Now</nav>
+                  <nav>
+                    <form><input type="search" placeholder="Search Something"></form></nav>
               </section>
               <section class="col-12 mt-1 mb-2">
                   <h3>Menos Lidos</h3>
