--- a/preca.html
+++ b/preca.html
@@ -13,10 +13,10 @@
     <body class="container-fluid">
 
       <header class="row">
-        <h1><a href="index.html" style="font-family:Work Sans; text-decoration:none; color:#ffffff; background-color: #f30008;">Yogurt</a></h1>
+        <h1><a href="index.html" style="font-family:Work Sans; text-decoration:none; color:#ffffff; background-color: #f30008;">••Yogurt••</a></h1>
           <div class="col-12">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="#">Search something</a>
+
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
